[package]
name = "mqttdn"
version = "0.1.6"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
derive_more = { version = "2.1", features = ["from"] }
directories = "6.0"
home = "0.5"
log = "0.4"
pidlock = "0.2"
rstaples = "0.4"
rumqttc = "0.25"
serde = { version = "1.0", features = ["derive"] }
shell-words = "1.1"
toml = "0.9"
uuid = { version = "1.19", features = ["v4"] }
which = "8.0"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"
